_tf_modules/network/basic/v1/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.rule.host_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  instance_tenancy = "default"

  tags = merge(
    var.tags,
    {
      Name = local.naming_rule
    }
  )
}
